# xxlink-client

./: .gitignore  Cargo.toml  Changelog.md  Makefile.toml  RELEASE.md  debug-launch.bat  package.json  pnpm-lock.yaml  run-dev.bat  vite.config.mts
.github/workflows/: autobuild.yml  pr-ai-slop-review.lock.yml  release.yml
crates/clash-verge-i18n/locales/: ar.yml  de.yml  en.yml  es.yml  fa.yml  id.yml  jp.yml  ko.yml  ru.yml  tr.yml  tt.yml  zh.yml  zhtw.yml
crates/clash-verge-i18n/src/: lib.rs
crates/tauri-plugin-xxlink-sysinfo/: Cargo.toml
crates/tauri-plugin-xxlink-sysinfo/src/: lib.rs
crates/xxlink-draft/: Cargo.toml
crates/xxlink-draft/bench/: benche_me.rs
crates/xxlink-draft/tests/: test_me.rs
crates/xxlink-i18n/: Cargo.toml
crates/xxlink-i18n/locales/: zh.yml
crates/xxlink-limiter/: Cargo.toml
crates/xxlink-logging/: Cargo.toml
crates/xxlink-logging/src/: lib.rs
crates/xxlink-service-ipc/: Cargo.toml  Makefile
crates/xxlink-service-ipc/resources/: info.plist.tmpl  installer.nsi  launchd.plist.tmpl
crates/xxlink-service-ipc/src/: lib.rs
crates/xxlink-service-ipc/tests/: test_start_and_parse.rs  test_start_and_stop.rs  test_start_from_start.rs  test_start_permissions.rs
crates/xxlink-signal/: Cargo.toml
crates/xxlink-signal/src/: lib.rs  unix.rs  windows.rs
docs/: RELEASE.md
scripts/: cleanup-unused-i18n.mjs  deploy-client.sh  portable.mjs  prebuild.mjs  release-version.mjs  sign-windows-installers.ps1  updatelog.mjs  updater-fixed-webview2.mjs  updater.mjs
src/: index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.x64.json  webview2.x86.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs
src-tauri/src/cmd/: app.rs  clash.rs  mod.rs  network.rs  oauth.rs  profile.rs  proxy.rs  runtime.rs  save_profile.rs  validate.rs  verge.rs
src-tauri/src/cmd/media_unlock_checker/: bahamut.rs  disney_plus.rs  mod.rs  netflix.rs  prime_video.rs  youtube.rs
src-tauri/src/config/: clash.rs  config.rs  prfitem.rs  profiles.rs  verge.rs
src-tauri/src/core/: autostart.rs  backup.rs  handle.rs  logger.rs  mod.rs  notification.rs  service.rs  sysopt.rs  timer.rs  updater.rs  validate.rs
src-tauri/src/core/manager/: config.rs  lifecycle.rs  mod.rs  state.rs
src-tauri/src/core/tray/: menu_def.rs  mod.rs
src-tauri/src/enhance/: chain.rs  field.rs  mod.rs  script.rs
src-tauri/src/feat/: clash.rs  config.rs  mod.rs  profile.rs  proxy.rs  window.rs
src-tauri/src/module/: lightweight.rs
src-tauri/src/utils/: arch_check.rs  dirs.rs  help.rs  init.rs  mod.rs  network.rs  notification.rs  schtasks.rs  server.rs  tmpl.rs  window_manager.rs
src-tauri/src/utils/linux/: workarounds.rs
src-tauri/src/utils/resolve/: dns.rs  mod.rs  scheme.rs  ui.rs  window.rs
src/components/: require-auth.tsx
src/components/base/: base-error-boundary.tsx
src/components/home/: connect-mode-card.tsx  current-proxy-card.tsx
src/components/layout/: announcement-prompt.tsx  update-prompt.tsx
src/components/profile/: profile-item.tsx  profile-viewer.tsx
src/components/proxy/: proxy-groups.tsx  use-filter-sort.ts
src/components/setting/: setting-clash.tsx  setting-verge-advanced.tsx  setting-verge-basic.tsx
src/hooks/: use-connect-mode.ts  use-icon-cache.ts
src/locales/ar/: home.json  layout.json  settings.json
src/pages/: _layout.tsx  _routers.tsx  _theme.tsx  api-keys.tsx  connect.tsx  home.tsx  login.tsx  logs.tsx  plans.tsx  profiles.tsx  promo-code.tsx  proxies.tsx  register.tsx  settings.tsx
src/services/: api.ts  auth-store.ts  auth.ts  cmds.ts  config.ts  i18n.ts  subscription-auto-sync.ts  subscription-sync.ts
src/types/: global.d.ts
src/utils/: proxy-display.ts
(+53 files in other folders)
