[package]
name = "xxlink-client"
version = "1.1.5"
description = "XXLink desktop client"
authors = ["zzzgydi", "Tunglies", "wonfen", "MystiPanda"]
license = "GPL-3.0-only"
repository = "https://github.com/Inori9527/xxlink-client.git"
default-run = "xxlink-client"
build = "build.rs"
edition = "2024"
rust-version = "1.91"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
verge-dev = ["tauri/devtools"]
tauri-dev = []
tokio-trace = ["console-subscriber"]
clippy = ["tauri/test"]
tracing = []

[package.metadata.bundle]
identifier = "com.xxlink.desktop"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
xxlink-draft = { workspace = true }
xxlink-logging = { workspace = true }
xxlink-signal = { workspace = true }
xxlink-i18n = { workspace = true }
xxlink-limiter = { workspace = true }
tauri-plugin-xxlink-sysinfo = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri = { workspace = true, features = [
  "protocol-asset",
  "tray-icon",
  "image-ico",
  "image-png",
] }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
compact_str = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
bitflags = { workspace = true }
warp = { version = "0.4.2", features = ["server"] }
open = "5.3.3"
urlencoding = "2.1.3"
dunce = "1.0.5"
nanoid = "0.4"
chrono = "0.4.44"
once_cell = { version = "1.21.4", features = ["parking_lot"] }
delay_timer = "0.11.6"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.2", features = [
  "json",
  "cookies",
  "rustls",
  "form",
] }
regex = "1.12.3"
sysproxy = { git = "https://github.com/clash-verge-rev/sysproxy-rs", branch = "0.5.3", features = [
  "guard",
] }
network-interface = { version = "2.0.5", features = ["serde"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-window-state = "2.4.1"
url = "2"
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.22.1"
getrandom = "0.4.2"
futures = "0.3.32"
gethostname = "1.1.0"
scopeguard = "1.2.0"
tauri-plugin-notification = "2.3.3"
tokio-stream = "0.1.18"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
tauri-plugin-http = "2.5.7"
console-subscriber = { version = "0.5.0", optional = true }
tauri-plugin-devtools = { version = "2.0.1" }
tauri-plugin-mihomo = { git = "https://github.com/clash-verge-rev/tauri-plugin-mihomo", branch = "revert" }
xxlink_logger = { package = "clash_verge_logger", git = "https://github.com/clash-verge-rev/clash-verge-logger" }
async-trait = "0.1.89"
xxlink_service_ipc = { workspace = true, features = ["client"] }
arc-swap = "1.9.0"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1.0"
rust_iso3166 = "0.1.14"
# Use the git repo until the next release after v2.0.0.
dark-light = { git = "https://github.com/rust-dark-light/dark-light" }

[target.'cfg(windows)'.dependencies]
deelevate = { workspace = true }
runas = "=1.2.0"
winreg = "0.56.0"
windows = { version = "0.62.2", features = [
  "Win32_Globalization",
  "Win32_Networking_WinInet",
  "Win32_System_Diagnostics_Debug",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.0"

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true
